--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -4,3 +4,17 @@
                                    :default => "Edit #{model_class.model_name.human}") %></h1>
 </div>
 <%= render :partial => 'form' %>
+<h3>Entries</h3>
+<table class="table table-condensed table-striped">
+	<tr><th>Picture</th><th>Song</th><th>Movie</th></tr>
+<% @calendar.entries.each do |e| %>
+	<tr>
+		<td><%= e.picture %></td>
+		<td><%= e.song %></td>
+		<td><%= e.movie %></td>
+	</tr>
+	
+<% end %>
+
+</table>
+<%= link_to "New entry", new_calendar_entry_path(@calendar), :class => 'btn' %>
