--- a/app/views/calendars/_form.html.erb
+++ b/app/views/calendars/_form.html.erb
@@ -1,6 +1,9 @@
 <%= simple_form_for @calendar, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.input :name %>
   <%= f.input :pub_date, :as => :string, :input_html => {:class => 'dt'}%>
+  <%= f.input :end_date, :as => :string, :input_html => {:class => 'dt'}%>
+  <%= f.input :days_to_count_down %>
+
 	<%= f.input :background, :as => :file %>
   <div class="form-actions">
     <%= f.button :submit, :class => 'btn-primary' %>
