--- a/app/views/layouts/showcalendar.html.erb
+++ b/app/views/layouts/showcalendar.html.erb
@@ -54,6 +54,7 @@
 		</div>
 
 <% if params[:debug] %>		
+	<%= link_to "endragify", '#', {:id => 'endragify', :class => 'btn btn-small'} %>
 	<div id="entryformarea">
 		
 	</div>
