--- a/app/views/layouts/showcalendar.html.erb
+++ b/app/views/layouts/showcalendar.html.erb
@@ -52,6 +52,12 @@
 			<h2>2012</h2>
 			<h3>Advent Calendar</h3>
 		</div>
+		
+		<div id="channelinfo">
+			<p>Current channel: <span id="currchan">1</span></p>
+		</div>
+
+
 
 <% if params[:debug] %>		
 	<%= link_to "endragify", '#', {:id => 'endragify', :class => 'btn btn-small'} %>
