--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -1,6 +1,6 @@
 <% @calendar.entries.each do |entry| %>
 	<div class="numlink" style="top:<%= entry.y %>px; left:<%= entry.x %>px;z-index:0;" data-eid="<%= entry.id %>">
-		<%= link_to_if entry.unlocked?(params[:debug]), entry.day, "#myModal", {:class => 'etrig', :calendar_id => @calendar.id, :entry_id => entry.id} %>
+		<%= link_to_if entry.unlocked?(params[:debug]), entry.day, "#myModal", {:class => 'etrig', :calendar_id => @calendar.id, :entry_id => entry.id, :entry_day => entry.day, :channel_id => 1} %>
 	</div>
 <% end %>
 
@@ -10,7 +10,9 @@
 
 <div id="myModal" class="modal hide fade">
     <button type="button" class="close closebutton" data-dismiss="modal" aria-hidden="true"><i class="icon-remove"></i></button>
-    <p class="movebutton"><i class="icon-move"></i></p>
+    <p class="movebutton" style="text-align:center;"><i class="icon-move" style="float:left;"></i>
+		&nbsp;<span class="modalhead">Channel</span> <span id="modalchannel" class="modallabel"></span>&nbsp;&nbsp;&nbsp;&nbsp; <span class="modalhead" class="modallabel">December</span> <span id="modalday"></span>
+	</p>
   <div class="modal-body" style="overflow-y:visible;">
   </div>
 <%#
