--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -49,9 +49,15 @@ body {
 	line-height:auto;
 	padding:15px;
 }
-h1, h2, h3, .num, #channelinfo {
+h1, h2, h3, .num, #channelinfo, .movebutton {
 	font-family: Spinnaker;
 	text-transform: uppercase;
+}
+.modalhead {
+	color:@lightGreen;
+}
+.modallabel {
+	font-weight:bold;
 }
 #logo, #logo h3, #logo h2 {
 	text-align:center;
