--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -40,6 +40,7 @@
 }
 body {
 	font-family: 'Oranienbaum', serif;
+	background-color: #c92221;
 }
 #audioinfo, #instructions {
 	border: 1px solid #666;
