--- a/app/views/layouts/showcalendar.html.erb
+++ b/app/views/layouts/showcalendar.html.erb
@@ -68,7 +68,8 @@
 		
 		<div id="instructions" class="alpha60">
 			<h3>Now, with double the Christmas!</h3>
-			<p>This year, each day on the advent calendar has <em>two</em> goodies. Just pick one of the two channels on the TV, pick your day, and enjoy!</p>
+			<p>This year, each day on the advent calendar has <em>two</em> goodies.</p> 
+			<p>Just click on one of the two large round knobs on the TV to select one of two channels, pick your day, and enjoy! </p>
 		</div>
 		
 	
