--- a/app/views/calendars/edit.html.erb
+++ b/app/views/calendars/edit.html.erb
@@ -10,8 +10,14 @@
 <% @calendar.entries.each do |e| %>
 	<tr>
 		<td>
-			<%= link_to 'edit', edit_calendar_entry_path([@calendar,@entry]), {:class => 'btn btn-small btn-info'} %>
-			<%= link_to 'preview', calendar_entry_path([@calendar,@entry]), {:class => 'btn btn-small'} %>
+			<%= link_to 'edit', edit_calendar_entry_path(@calendar, e), {:class => 'btn btn-small btn-info'} %>
+			<%= link_to 'preview', calendar_entry_path(@calendar, e), {:class => 'btn btn-small'} %>
+          	<%= link_to t('.destroy', :default => t("helpers.links.destroy")),
+                      calendar_entry_path(@calendar, e),
+                      :method => :delete,
+                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
+                      :class => 'btn btn-mini btn-danger' %>
+
 		</td>
 		<td><%= e.day %></td>
 		<td>
