--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,10 @@
           <a class="brand" href="#">Advent</a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li><%= link_to "Songs", "/songs"  %></li>
+              <li><%= link_to "Pictures", "/pictures"  %></li>
+              <li><%= link_to "Movies", "/movies"  %></li>
+              <li><%= link_to "Calendars", "/calendars"  %></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
