--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -6,6 +6,8 @@
 <dl class="dl-horizontal">
   <dt><strong><%= model_class.human_attribute_name(:songfile_file_name) %>:</strong></dt>
   <dd><%= @song.songfile_file_name %></dd>
+  <dt><strong>URL:</strong></dt>
+  <dd><%= @song.songfile %></dd>
   <dt><strong><%= model_class.human_attribute_name(:songfile_content_type) %>:</strong></dt>
   <dd><%= @song.songfile_content_type %></dd>
   <dt><strong><%= model_class.human_attribute_name(:songfile_file_size) %>:</strong></dt>
