--- a/app/views/calendars/show.html.erb
+++ b/app/views/calendars/show.html.erb
@@ -15,10 +15,17 @@
 	</p>
   <div class="modal-body" style="overflow-y:visible;">
   </div>
-<%#
-  <div class="modal-footer">
-    <a href="#" class="btn">Close</a>
-    <a href="#" class="btn btn-primary">Save changes</a>
-  </div>
- %>
 </div>
+
+<div id="radioModal" class="modal hide fade">
+    <button type="button" class="close closebutton" data-dismiss="modal" aria-hidden="true"><i class="icon-remove"></i></button>
+    <p class="movebutton" style="text-align:center;"><i class="icon-move" style="float:left;"></i>
+	Advent Radio
+	<div class="modal-body" style="overflow-y:visible;">
+		aloha
+	
+	</div>
+
+</div>
+
+
